--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -1,6 +1,7 @@
 @import "normalize.less";
 @import "variables.less";
 @import "main.less";
+@import "modal.less";
 @import "common.less";
 @import "icon.less";
 @import "swiper.less";
