--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -62,10 +62,13 @@
 @delete-button-pressed: lighten(@delete-button, 20%);
 @overdue-task: @delete-button;
 
+// Misc
+
+@rounded-corner-radius: 15px;
+
 // Components
 @plus-button-width: 27px;
 @fade-time: 0.2s;
 @icon-button-width: @plus-button-width;
-
-@danger-background: @delete-button;
-@danger-text: white;
+@danger-text: @delete-button;
+@max-modal-width: 400px;
