Added requirements for terms of service and privacy policy to sign up

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -81,6 +81,28 @@ section#forgot {
   }
 }
 
+section#signup {
+  .column {
+    .banner {
+      margin-bottom: -@vertical-grid * 7;
+    }
+    .content {
+      span#agreeText {
+        font-size: @small-font-size;
+        color: @content;
+        line-height: 19px;
+        a {
+          color: @highlighted-element;
+        }
+        a:active {
+          color: @highlighted-element-pressed;
+        }
+      }
+    }
+  }
+}
+
+
 // HOME
 
 section#home {
