Rudimentary Snap.js implementation.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -463,6 +463,17 @@ span.icon-i:active, span.icon-plus:active {
   color: @danger-text;
 }
 
+.snap-drawer {
+  position: absolute;
+  top: 0;
+  right: auto;
+  bottom: 0;
+  left: auto;
+  width: 260px;
+  height: auto;
+  overflow: auto;
+}
+
 // CONTENT
 
 .content {
