--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -106,6 +106,9 @@ section#signup {
 // HOME
 
 section#home {
+  .column {
+    background: white;
+  }
   header#main-header {
     min-height: @main-header-height;
     #menu-content {
