--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -472,6 +472,10 @@ span.icon-i:active, span.icon-plus:active {
   width: 260px;
   height: auto;
   overflow: auto;
+  background: #52575F;
+  color: #FEFFFF;
+  padding: 0 30px 0 30px;
+  margin-right: 30px;
 }
 
 // CONTENT
