Drawer with iScroll lite.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -465,16 +465,12 @@ span.icon-i:active, span.icon-plus:active {
 
 .snap-drawer {
   position: absolute;
-  top: 0;
-  right: auto;
-  bottom: 0;
-  left: auto;
   width: 260px;
-  height: auto;
-  overflow: auto;
+  height: inherit;
   background: #52575F;
   color: #FEFFFF;
-  padding: 0 30px 0 30px;
+  padding-right:30px;
+  padding-left: 30px;
   margin-right: 30px;
 }
 
