--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -134,6 +134,7 @@ footer {
   .center-horizontally;
   max-width: @two-column-grid-width;
   background-color: white;
+  font-size: @smallest-font-size;
   nav {
     padding-top: 5px;
     ul {
