padding-bottom to drawer's menu content.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -474,6 +474,10 @@ span.icon-i:active, span.icon-plus:active {
   margin-right: 30px;
 }
 
+#menu-content {
+  padding-bottom: @footer-height*1.5;
+}
+
 // CONTENT
 
 .content {
