--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -66,7 +66,7 @@ li.datepicker-date {
   }
 }
 
-// HOME
+// PAGE HEADER
 
 nav#page-header {
   color: @highlighted-element;  
@@ -103,5 +103,12 @@ nav#page-header {
   }
   button#menu-button:active{
     background-position: 0 0;
+  }
+
+  #omnibar-search-results {
+    height: 100%;
+    background-color: white;
+    z-index: 1;
+    position:relative;
   }
 }
