--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -96,13 +96,17 @@ nav#page-header {
   }
   button#menu-button{
     .button;
-    // padding: 16px 0 16px 20px; // increased clicking area
-    padding: 16px 20px 16px 0; // increased clicking area
-    // margin-right: -3px; // aligns menu button to the edge of the column
+    padding: 10px 20px 10px 0; // increased clicking area
     margin-left: -3px; // aligns menu button to the edge of the column
   }
   button#menu-button:active{
     background-position: 0 0;
+  }
+
+  div#add-new-button {
+    button{
+      padding: 5px 0px 5px 5px; // increased clicking area
+    }
   }
 
   #omnibar-search-results {
