--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -68,7 +68,7 @@ li.datepicker-date {
 
 // PAGE HEADER
 
-nav#page-header {
+header.page-header nav {
   color: @highlighted-element;  
   min-height: @main-header-height;
   #menu-content {
@@ -114,5 +114,14 @@ nav#page-header {
     background-color: white;
     z-index: 1;
     position:relative;
+  }
+}
+
+div.page-heading {
+  input{
+    text-align: center;
+  }
+  input:focus {
+    text-align: left; 
   }
 }
