Snap drawer menu content CSS.

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -460,23 +460,24 @@ span.icon-i:active, span.icon-plus:active {
   color: @danger-text;
 }
 
+// DRAWER
+
 .snap-drawer {
   position: absolute;
   width: 260px;
   height: inherit;
   background: #52575F;
   color: #FEFFFF;
-}
-
-#menu-content {
-  padding-bottom: @footer-height*1.5;
-  a, span {
-    padding-right:30px;
-    padding-left: 30px;
-  }
-  a {
-    // http://getbootstrap.com/components/#dropdowns
-    display: block;
+  #menu-content {
+    padding-bottom: @footer-height*1.5;
+    a, span {
+      padding-right: 30px;
+      padding-left: 30px;
+    }
+    a {
+      // http://getbootstrap.com/components/#dropdowns
+      display: block;
+    }
   }
 }
 
