Relative positioning to date heading.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -135,8 +135,8 @@ section#tasks-dates {
       background-color: @highlighted-element;
     }
   }
-  .inner-slide-content-container{
-    padding-bottom: @footer-height;
+  .date-heading {
+    position: relative;
   }
 }
 
