--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -112,35 +112,48 @@ section#signup {
 
 section#tasks-dates {
   #datepicker {
-    // http://stackoverflow.com/a/14103766
-    ul {
-      display: table;
-      width: 100%;
-      li {
-        display: table-cell;
-        width: 11.111111111%;  /* (100 / numItems)% */
-        text-align: center;
-        a {
-          font-size: @small-font-size;
+    width: 260px;
+    height: 60px;
+    overflow: hidden;
+    div#scroller {
+      width: 300%;
+      height: 60px;
+      nav[role=navigation].slide {
+        width: 260px;
+        height: 60px;
+        float: left;
+        // http://stackoverflow.com/a/14103766
+        // How to stretch html / css horizontal navigation items evenly and fully across a specified container
+        ul {
+          display: table;
           width: 100%;
-          color: @highlighted-element;
-          display: table-cell;
-          span.day-date {
-            vertical-align: middle;
-            width: 25px;
-            height: 25px;
+          li {
             display: table-cell;
-          }
-        }
-        a.change-week-arrow {
-          display: block;
-        }
-        a.activeDay {
-          font-weight: bold;
-          span.day-date {
-            color: white;
-            border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
-            background-color: @highlighted-element;
+            width: 14.2857143%;  /* (100 / numItems)% */
+            text-align: center;
+            a {
+              font-size: @small-font-size;
+              width: 100%;
+              color: @highlighted-element;
+              display: table-cell;
+              span.day-date {
+                vertical-align: middle;
+                width: 25px;
+                height: 25px;
+                display: table-cell;
+              }
+            }
+            a.change-week-arrow {
+              display: block;
+            }
+            a.activeDay {
+              font-weight: bold;
+              span.day-date {
+                color: white;
+                border-radius: 50%; //http://css-tricks.com/almanac/properties/b/border-radius/
+                background-color: @highlighted-element;
+              }
+            }
           }
         }
       }
