--- a/frontend/core/src/main/webapp/static/less/icon.less
+++ b/frontend/core/src/main/webapp/static/less/icon.less
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('../fonts/icomoon.eot?-2739zg');
-	src:url('../fonts/icomoon.eot?#iefix-2739zg') format('embedded-opentype'),
-		url('../fonts/icomoon.woff?-2739zg') format('woff'),
-		url('../fonts/icomoon.ttf?-2739zg') format('truetype'),
-		url('../fonts/icomoon.svg?-2739zg#icomoon') format('svg');
+	src:url('../fonts/icomoon.eot?fm28va');
+	src:url('../fonts/icomoon.eot?#iefixfm28va') format('embedded-opentype'),
+		url('../fonts/icomoon.woff?fm28va') format('woff'),
+		url('../fonts/icomoon.ttf?fm28va') format('truetype'),
+		url('../fonts/icomoon.svg?fm28va#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -22,6 +22,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-plus:before {
+	content: "\e603";
+}
 .icon-tasks:before {
 	content: "\e600";
 }
@@ -57,7 +60,4 @@
 }
 .icon-arrow_left:before {
 	content: "\e60c";
-}
-.icon-plus:before {
-	content: "\e603";
 }
