--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -15,7 +15,7 @@
 @slide-indicator-width: 0.5em;
 
 // Columns
-@one-column-grid-width: 480px;
+@one-column-grid-width: 568px; // iPhone 5 landscape is still one column
 @two-column-grid-width: 720px;
 @two-column-grid-main-width: 66.66%;
 @two-column-grid-aside-width: 33.33%;
