--- a/frontend/core/src/main/webapp/static/less/grid.less
+++ b/frontend/core/src/main/webapp/static/less/grid.less
@@ -64,30 +64,34 @@ header {
   * {
     vertical-align: middle;
   }
+  &.header-hidden{
+    z-index:0 !important;
+  }
 }
 
 .page-header {
   min-height: @page-header-height;
-  //max-width: @two-column-grid-width;
   .center-horizontally;
   position: relative;
-  .left-of-three {
-    padding-left: @horizontal-grid;
+  #menu-button-wrapper {
     background-color: white;
     float:left;
     text-align: right;
-    // Width determined with javascript: 50%-50px
+    // Width determined with javascript
   }
-  .center-of-three {
-    width: 200px;
-    .transparent-background;
+  #omnibar-label-wrapper {
+    float: left;
+    text-align: center;
+    label{
+      display:block;
+    }
+    // Width determined with javascript
   }
-  .right-of-three {
-    padding-right: @horizontal-grid;
+  #plus-button-wrapper {
     background-color: white;
     float:right;
     text-align: left;
-    // Width determined with javascript: 50%-50px
+    // Width determined with javascript
   }
 }
 
@@ -99,12 +103,12 @@ header {
 // CONTENT
 
 .page-heading {
-  height: @page-header-height;
+  min-height: @page-header-height;
 }
 
 .page-content-container {
   height: inherit;
-  padding-bottom: @footer-height;
+  padding-bottom: @footer-height + @page-header-height;
   .accordion-wrapper {
     height: inherit;
   }
@@ -170,6 +174,12 @@ footer {
 .swiper-container.main-slides {
   margin-top: -@page-header-height;
   margin-bottom: -@footer-height;
+}
+
+// NO SWIPER
+
+.no-slides-container .header-page {
+  margin-top: -@page-header-height;
 }
 
 // RESPONSIVE
