--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -37,6 +37,7 @@
 // Colors
 @content: black;
 @content-pressed: lighten(@content, 20%);
+@content-area-header: #3D3D3D;
 @logo: #3b3b3b;
 @icon: #999999;
 @separator: #dadada;
