content title now black

--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -1,5 +1,7 @@
 .page-header {
-  color: @highlighted-element;
+  color: @content-area-header;
+  font-weight: 600;
+  font-size: smaller;
 }
 
 // ABSOLUTE CENTER
