--- a/frontend/core/src/main/webapp/static/less/common.less
+++ b/frontend/core/src/main/webapp/static/less/common.less
@@ -1,7 +1,7 @@
 .page-header {
   color: @content-area-header;
   font-weight: 600;
-  font-size: smaller;
+  font-size: 1em;
 }
 
 // ABSOLUTE CENTER
