Added overview and details to notes as well. Changed navigation to match heading, with the rightmost slide either 'tasks' or 'notes'. Fixed omnibar results height. Removed unnecessary slides services. Refactored filters.

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -145,6 +145,7 @@ div.page-heading {
   }
 
   #omnibar-results{
+    margin-top: 12px;
     float: left;
     overflow-y: auto;
     // height set with javascript    
