Fixed details slide omnibar not working. Added click elsewhere to close omnibar

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -148,7 +148,12 @@ div.page-heading {
     margin-top: 12px;
     float: left;
     overflow-y: auto;
-    // height set with javascript    
+    // height set with javascript
+
+    #filtered-items-placeholder{
+      height: 100%;
+      // width set with javascript
+    }
   }
 }
 
