--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -166,9 +166,9 @@ div.page-heading {
   height: inherit;
   .center-horizontally;
   #menu-content {
+    padding-top: @main-header-height;
     padding-left: @horizontal-grid;
     width: auto;
-    padding-top: 10px;
     a {
       color: @default-element;
     }
