--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -105,10 +105,10 @@ header.page-header nav {
 }
 
 div.page-heading {
-  input{
+  input.omnibar-input{
     text-align: center;
   }
-  input:focus {
+  input.omnibar-input:focus {
     text-align: left; 
   }
 }
