Changed content heading to black to make it pop out more

--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -37,7 +37,7 @@
 // Colors
 @content: black;
 @content-pressed: lighten(@content, 20%);
-@content-heading: #3D3D3D;
+@content-heading: black;
 @content-heading-pressed: lighten(@content-heading, 20%);
 @logo: #3b3b3b;
 @icon: #999999;
