LESS documentation started

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -1,3 +1,7 @@
+/*
+Extended Mind specific UI-components.
+*/
+
 // When item is active, show top&bottom borders
 .accordion-item-active {
   border-top-style: solid;
