--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -1,3 +1,6 @@
+/*
+Every mixin here should cover only a single page view. If it affects more than it, it should be in components.less.
+*/
 
 // COMMON
 
