Slightly bigger page heading font size

--- a/frontend/core/src/main/webapp/static/less/components.less
+++ b/frontend/core/src/main/webapp/static/less/components.less
@@ -144,18 +144,22 @@ footer {
   .omnibar-hidden {
     .center-horizontally;
     input::-webkit-input-placeholder { /* WebKit browsers */
+      font-size: @large-font-size;
       font-weight: bold;
       color: @highlighted-element;
     }
     input:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+      font-size: @large-font-size;
       font-weight: bold;
       color: @highlighted-element;
     }
     input::-moz-placeholder { /* Mozilla Firefox 19+ */
+      font-size: @large-font-size;
       font-weight: bold;
       color: @highlighted-element;
     }
     input:-ms-input-placeholder { /* Internet Explorer 10+ */
+      font-size: @large-font-size;
       font-weight: bold;
       color: @highlighted-element;
     }
