--- a/frontend/core/src/main/webapp/static/less/variables.less
+++ b/frontend/core/src/main/webapp/static/less/variables.less
@@ -9,6 +9,7 @@
 
 // Typography
 @font: 'HelveticaNeue-Light', 'Helvetica Neue Light', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+@large-font-size: 20px;
 @default-font-size: 18px; 
 @small-font-size: 15px; 
 @smallest-font-size: 12px;
