Datepicker and date heading height synchronized.

--- a/frontend/core/src/main/webapp/static/less/pages.less
+++ b/frontend/core/src/main/webapp/static/less/pages.less
@@ -128,7 +128,7 @@ section#tasks-dates {
   #datepicker {
     z-index: 1;
     height: @vertical-grid + 5;
-    margin-bottom: -5px;
+    margin-top: -15px;
     overflow: hidden;
     div#scroller {
       // http://stackoverflow.com/a/18784257
@@ -179,6 +179,7 @@ section#tasks-dates {
     }
   }
   .date-heading {
+    height: @vertical-grid - 10;
     position: relative;
   }
 }
